# score-norm-fairness

./: License  README.md  environment.yaml  pyproject.toml  score.py  score_norm.py  setup.py
config/: rfw.sh  vgg_gender.sh  vgg_race.sh
dataset/: __init__.py  rfw.py  vgg2.py
evaluation/TMR/: calculate_tmr.py  tmr.sh
evaluation/WERM/: report.sh  werm_report.py
score_norm_fairness/: __init__.py  evaluate_performance.py  evaluation.py  metrics_only.py  postprocess.py  score.py  utils.py
score_norm_fairness/dataset/: __init__.py  rfw.py  vgg2.py
score_norm_fairness/extractor/: E5.py  E6.py  __init__.py  extractor.py
score_norm_fairness/script/: extractor.py  score_norm.py  tmr_table.py  visualization.py  werm_report.py
scripts/: download_features.sh  download_protocol.sh  evaluate.sh  extractor.sh  rfw.sh  tmr_table.sh  vgg2.sh  vgg_gender.sh  visualization.sh  werm_report.sh
